--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.6.6",
+    "apollo-server": "^3.8.2",
+    "apollo-server-express": "^3.8.2",
     "axios": "^0.27.2",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.0",
-    "express-graphql": "^0.12.0",
-    "graphql": "^16.4.0"
+    "graphql": "^16.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
